--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,9 @@ mysite/polls/__pycache__/apps.cpython-37.pyc
 mysite/polls/__pycache__/models.cpython-37.pyc
 mysite/polls/__pycache__/urls.cpython-37.pyc
 mysite/polls/__pycache__/views.cpython-37.pyc
+
 mysite/polls/static/polls/js/
+.idea/dataSources.xml
+.idea/dataSources/
+exercise.pdf
+mysite/__pycache__/manage.cpython-37.pyc
