--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,7 @@
 .idea/misc.xml
 .idea/modules.xml
 .idea/vcs.xml
-mysite/mysite/__pycache__/settings.cpython-37.pyc
-mysite/mysite/__pycache__/urls.cpython-37.pyc
-mysite/mysite/__pycache__/views.cpython-37.pyc
-mysite/mysite/__pycache__/wsgi.cpython-37.pyc
-mysite/polls/__pycache__/admin.cpython-37.pyc
-mysite/polls/__pycache__/apps.cpython-37.pyc
-mysite/polls/__pycache__/models.cpython-37.pyc
-mysite/polls/__pycache__/urls.cpython-37.pyc
-mysite/polls/__pycache__/views.cpython-37.pyc
-
-mysite/polls/static/polls/js/
+*.pyc
 .idea/dataSources.xml
 .idea/dataSources/
 exercise.pdf
-mysite/__pycache__/manage.cpython-37.pyc
